separated header, footer,carousel
Separated these three files. Now using a php file for content and
including the header and footer as required

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5830,11 +5830,14 @@ button.close {
 
 .carousel {
   position: relative;
+    width:640px;
+  height:360px;
 }
 
 .carousel-inner {
   position: relative;
   width: 100%;
+
   overflow: hidden;
 }
 
